Rewrite (#46)
