# api/models/auth_model.go
@@ -1,0 +1,6 @@
+package models
+
+type AuthModel struct {
+	ApiToken string   `bson:"_id" json:"_id"`
+	Devices  []string `bson:"devices" json:"devices"`
+}
